@@ -1,3 +1,5 @@
+- Boolean properties now return a numeric, not labelled representation of their value, by default. <checkbox>es should be unaffected.
+- Added GUI element for entering a set of options for an arbitrary number of items		TODO: document
 - Reduce CPU usage of pluings while idle
 - Fix conversion from Numeric to Factor in the data editor
 - In the data.frame editor, columns containing invalid values are now highlighted in red
